// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calc 1.0.0 + major - - 1`] = `
{
  "version": "2.0.0",
}
`;

exports[`calc 1.0.0 + major - alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-alpha.0",
}
`;

exports[`calc 1.0.0 + minor - - 1`] = `
{
  "version": "1.1.0",
}
`;

exports[`calc 1.0.0 + minor - alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.1.0-alpha.0",
}
`;

exports[`calc 1.0.0 + patch - - 1`] = `
{
  "version": "1.0.1",
}
`;

exports[`calc 1.0.0 + patch - alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.0.1-alpha.0",
}
`;

exports[`calc 1.0.1-alpha.0 + major 1.0.0 - 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0",
}
`;

exports[`calc 1.0.1-alpha.0 + major 1.0.0 alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-alpha.0",
}
`;

exports[`calc 1.0.1-alpha.0 + major 1.0.0 beta 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-beta.0",
}
`;

exports[`calc 1.0.1-alpha.0 + minor 1.0.0 - 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.1.0",
}
`;

exports[`calc 1.0.1-alpha.0 + minor 1.0.0 alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.1.0-alpha.0",
}
`;

exports[`calc 1.0.1-alpha.0 + minor 1.0.0 beta 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.1.0-beta.0",
}
`;

exports[`calc 1.0.1-alpha.0 + patch 1.0.0 - 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.0.1",
}
`;

exports[`calc 1.0.1-alpha.0 + patch 1.0.0 alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.0.1-alpha.1",
}
`;

exports[`calc 1.0.1-alpha.0 + patch 1.0.0 beta 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.0.1-beta.0",
}
`;

exports[`calc 1.1.0-alpha.0 + major 1.0.0 - 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0",
}
`;

exports[`calc 1.1.0-alpha.0 + major 1.0.0 alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-alpha.0",
}
`;

exports[`calc 1.1.0-alpha.0 + major 1.0.0 beta 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-beta.0",
}
`;

exports[`calc 1.1.0-alpha.0 + minor 1.0.0 - 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.1.0",
}
`;

exports[`calc 1.1.0-alpha.0 + minor 1.0.0 alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.1.0-alpha.1",
}
`;

exports[`calc 1.1.0-alpha.0 + minor 1.0.0 beta 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.1.0-beta.0",
}
`;

exports[`calc 1.1.0-alpha.0 + patch 1.0.0 - 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.1.0",
}
`;

exports[`calc 1.1.0-alpha.0 + patch 1.0.0 alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.1.0-alpha.1",
}
`;

exports[`calc 1.1.0-alpha.0 + patch 1.0.0 beta 1`] = `
{
  "preVersion": "1.0.0",
  "version": "1.1.0-beta.0",
}
`;

exports[`calc 2.0.0-alpha.0 + major 1.0.0 - 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0",
}
`;

exports[`calc 2.0.0-alpha.0 + major 1.0.0 alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-alpha.1",
}
`;

exports[`calc 2.0.0-alpha.0 + major 1.0.0 beta 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-beta.0",
}
`;

exports[`calc 2.0.0-alpha.0 + minor 1.0.0 - 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0",
}
`;

exports[`calc 2.0.0-alpha.0 + minor 1.0.0 alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-alpha.1",
}
`;

exports[`calc 2.0.0-alpha.0 + minor 1.0.0 beta 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-beta.0",
}
`;

exports[`calc 2.0.0-alpha.0 + patch 1.0.0 - 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0",
}
`;

exports[`calc 2.0.0-alpha.0 + patch 1.0.0 alpha 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-alpha.1",
}
`;

exports[`calc 2.0.0-alpha.0 + patch 1.0.0 beta 1`] = `
{
  "preVersion": "1.0.0",
  "version": "2.0.0-beta.0",
}
`;
